[gd_scene load_steps=12 format=3 uid="uid://d2goh8olskhrq"]

[ext_resource type="Script" uid="uid://dwtlugqudj3w2" path="res://scripts/planetselection.gd" id="1_285wn"]
[ext_resource type="Theme" uid="uid://c0es2kte6qmmp" path="res://scripts/normal.tres" id="2_ge70v"]
[ext_resource type="Texture2D" uid="uid://b18lot253t7t" path="res://assets/mercury.png" id="3_1mlip"]
[ext_resource type="Texture2D" uid="uid://c5lvpi8miefhy" path="res://assets/venus.png" id="4_mg2wx"]
[ext_resource type="Texture2D" uid="uid://bctijft1myqba" path="res://assets/earth.png" id="5_ohtkm"]
[ext_resource type="Texture2D" uid="uid://b6c5b7j3halft" path="res://assets/mars.png" id="6_8pemr"]
[ext_resource type="Texture2D" uid="uid://r3a3lvr8h25f" path="res://assets/space3.jpg" id="6_mg2wx"]
[ext_resource type="Texture2D" uid="uid://dowhecs3gsd0n" path="res://assets/jupiter.png" id="7_sef4j"]

[sub_resource type="Animation" id="Animation_8pemr"]
resource_name = "white_screen"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 325), Vector2(122, 359)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Mercury:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.3, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Venus:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Earth:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Mars:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Jupiter:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_sef4j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 325)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Mercury:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Venus:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Earth:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Mars:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Jupiter:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1xn6"]
_data = {
&"RESET": SubResource("Animation_sef4j"),
&"white_screen": SubResource("Animation_8pemr")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_285wn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_mg2wx")
expand_mode = 3

[node name="BackButton" type="Button" parent="CanvasLayer"]
z_index = 20
offset_left = 8.0
offset_top = 8.0
offset_right = 145.0
offset_bottom = 52.0
theme = ExtResource("2_ge70v")
text = "<-- Back"

[node name="FadeOverlay" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
z_index = 50
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialLabel" type="Label" parent="CanvasLayer"]
z_index = 1000
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -335.5
offset_right = 335.5
offset_bottom = 52.0
grow_horizontal = 2
theme = ExtResource("2_ge70v")
theme_override_font_sizes/font_size = 40
text = "Select your Destination!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)
position_smoothing_enabled = true

[node name="Mercury" type="TextureButton" parent="."]
z_index = 20
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 38.0
offset_top = 311.0
offset_right = 137.0
offset_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_1mlip")
stretch_mode = 5

[node name="Venus" type="TextureButton" parent="."]
z_index = 20
texture_filter = 1
offset_left = 127.0
offset_top = 180.0
offset_right = 269.0
offset_bottom = 322.0
texture_normal = ExtResource("4_mg2wx")
stretch_mode = 5

[node name="Earth" type="TextureButton" parent="."]
z_index = 20
texture_filter = 1
offset_left = 264.0
offset_top = 269.0
offset_right = 461.0
offset_bottom = 466.0
texture_normal = ExtResource("5_ohtkm")
stretch_mode = 5

[node name="Mars" type="TextureButton" parent="."]
z_index = 20
texture_filter = 1
offset_left = 455.0
offset_top = 160.0
offset_right = 576.0
offset_bottom = 281.0
texture_normal = ExtResource("6_8pemr")
stretch_mode = 5

[node name="Jupiter" type="TextureButton" parent="."]
z_index = 20
texture_filter = 1
offset_left = 584.0
offset_top = 257.0
offset_right = 842.0
offset_bottom = 515.0
texture_normal = ExtResource("7_sef4j")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasLayer")
libraries = {
&"": SubResource("AnimationLibrary_p1xn6")
}

[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Mercury" to="." method="_on_mercury_pressed"]
[connection signal="pressed" from="Venus" to="." method="_on_venus_pressed"]
[connection signal="pressed" from="Earth" to="." method="_on_earth_pressed"]
[connection signal="pressed" from="Mars" to="." method="_on_mars_pressed"]
[connection signal="pressed" from="Jupiter" to="." method="_on_jupiter_pressed"]
